--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "landingpage",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+  "version": "1.0.0",
+  "private": false,
+  "author": {
+    "email": "lnfernas@gmail.com",
+    "name": "Fernando Lima"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,10 +12,19 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "dependencies": {
+    "jsonp": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2"
+  },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
